--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
+import AsideMenu from '../components/AsideMenu.astro'
 ---
 
 <!doctype html>
@@ -17,21 +18,32 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div id="app" class="relative h-screen p-2 gap-2">
+			<aside id="aside" class="[grid-area:aside] flex flex-col overflow-y-auto bg-slate-500 rounded-md">
+				<AsideMenu />
+			</aside>
+			<main id="main" class="[grid-area:main] bg-zinc-900 rounded-md overflow-y-auto">
+				MAIN
+			</main>
+			<footer id="player" class="[grid-area:player] min-h-[100px]">
+				PLAYER
+			</footer>
+			<slot />
+		</div>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+<style>
+	#app {
+		display: grid;
+		grid-template-areas: 
+		"aside main main"
+		"player player player";
+		grid-template-columns: 350px 1fr;
+		grid-template-rows: 1fr auto;
 	}
+
+</style>
+<style is:global>
 	html {
 		font-family: system-ui, sans-serif;
 		background: #13151a;
