--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import AsideMenu from '../components/AsideMenu.astro'
 	</head>
 	<body>
 		<div id="app" class="relative h-screen p-2 gap-2">
-			<aside id="aside" class="[grid-area:aside] flex flex-col overflow-y-auto bg-slate-500 rounded-md">
+			<aside id="aside" class="[grid-area:aside] flex flex-col overflow-y-auto rounded-md">
 				<AsideMenu />
 			</aside>
 			<main id="main" class="[grid-area:main] bg-zinc-900 rounded-md overflow-y-auto">
