--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -3,12 +3,14 @@ import Home from "../icons/Home.astro";
 import Search from "../icons/Search.astro";
 import SideMenu from "./SideMenu.astro";
 import Library from "../icons/Library.astro";
+import { playlists } from "@/lib/data"
+import SideMenuCard from "@/components/SideMenuCard.astro"
 ---
 
 <nav class="gap-2 flex flex-1 flex-col">
     <div class="bg-zinc-900 p-2 rounded-lg">
         <ul>
-            <SideMenu href="/">
+        <SideMenu href="/">
                 <Home />
                 Home
             </SideMenu>
@@ -18,12 +20,15 @@ import Library from "../icons/Library.astro";
             </SideMenu>
         </ul>
     </div>
-    <div class="bg-zinc-900 p-2 rounded-lg">
-        <ul>
+    <div class="bg-zinc-900 p-2 rounded-lg flex-1">
+    <ul>
             <SideMenu href="/">
                 <Library />
                 My Library
             </SideMenu>
         </ul>
+        {
+            playlists.map(playlist=> <SideMenuCard playlist={playlist} />)
+        }
     </div>
 </nav>
