--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,12 @@
 ---
+	const { title } = Astro.props;
+	import AsideMenu from '@/components/AsideMenu.astro'
+
 interface Props {
 	title: string;
 }
 
-const { title } = Astro.props;
-import AsideMenu from '../components/AsideMenu.astro'
 ---
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -20,15 +20,15 @@ import AsideMenu from '../components/AsideMenu.astro'
 	<body>
 		<div id="app" class="relative h-screen p-2 gap-2">
 			<aside id="aside" class="[grid-area:aside] flex flex-col overflow-y-auto rounded-md">
-				<AsideMenu />
+				<AsideMenu/>
 			</aside>
 			<main id="main" class="[grid-area:main] bg-zinc-900 rounded-md overflow-y-auto">
+				<slot />
 				MAIN
 			</main>
 			<footer id="player" class="[grid-area:player] min-h-[100px]">
 				PLAYER
 			</footer>
-			<slot />
 		</div>
 	</body>
 </html>
@@ -45,18 +45,47 @@ import AsideMenu from '../components/AsideMenu.astro'
 </style>
 <style is:global>
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "CircularStd",system-ui, sans-serif;
+		background: #000000;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+		font-weight: 500;
+		font-style: normal;
+		font-display: swap;
 	}
+	
+	@font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+      }
 </style>
