--- a/src/components/LayoutPlaylistCard.astro
+++ b/src/components/LayoutPlaylistCard.astro
@@ -18,18 +18,22 @@ const artistsString = artists.join(', ')
     "playlist-item transition-all duration-300 flex flex-col relative 
     overflow-hidden gap-4 w-44 p-2 pb-8 rounded-md hover:bg-zinc-800 shadow-lg 
     hover:shadow-xl bg-zinc-500/30"
+    transition:name=`playlist ${id} box`
 >
     <picture class="aspect-square flex-none">
         <img src={cover}
         alt="Title"
         class="object-cover w-44 h-auto rounded-md"
+        transition:name=`playlist ${id} image`
         >
     </picture>
-    <div class="flex flex-auto flex-col truncate text-white text-sm px-2">
+    <div class="flex flex-auto flex-col truncate text-white text-sm px-2"
+    transition:name=`playlist ${id} title`>
         <h4>
             {title}
         </h4>
-        <span class="text-xs text-gray-400">
+        <span class="text-xs text-gray-400"
+        transition:name=`playlist ${id} artists`>
             {artistsString}
         </span>
     </div>
