--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 	const { title } = Astro.props;
 	import AsideMenu from '@/components/AsideMenu.astro'
-
+	import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -16,6 +16,7 @@ interface Props {
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<ViewTransitions fallback='none'/>
 		<title>{title}</title>
 	</head>
 	<body>
