--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
-	const { title } = Astro.props;
-	import AsideMenu from '@/components/AsideMenu.astro'
-	import { ViewTransitions } from 'astro:transitions';
+const { title } = Astro.props;
+import AsideMenu from '@/components/AsideMenu.astro'
+import { Player } from '@/components/PlayerSection';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -28,7 +29,7 @@ interface Props {
 				<slot />
 			</main>
 			<footer id="player" class="[grid-area:player] min-h-[100px]">
-				PLAYER
+				<Player client:load transition:name=`media-player` transition:persist/>
 			</footer>
 		</div>
 	</body>
@@ -48,6 +49,7 @@ interface Props {
 	html {
 		font-family: "CircularStd",system-ui, sans-serif;
 		background: #000000;
+		color: white;
 	}
 	
 	@font-face {
