--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import { playlists } from '@/lib/data';
 import LayoutPlaylistCard from '@/components/LayoutPlaylistCard.astro'
-import Greetings from '@/components/Greeting.svelte'
+import Greetings from '@/components/Greetings.tsx'
 ---
 
 <Layout title="Spotify Clone">
