--- a/src/components/LayoutPlaylistCard.astro
+++ b/src/components/LayoutPlaylistCard.astro
@@ -1,6 +1,6 @@
 ---
 import type { Playlist } from "@/lib/data";
-
+import { CardPlayButton } from "./CardPlayButton"
 interface Props {
 	playlist: Playlist;
 }
@@ -12,29 +12,35 @@ const artistsString = artists.join(', ')
 ---
 
 
-<a 
-    href= `./playlist/${id}`
-    class=
-    "playlist-item transition-all duration-300 flex flex-col relative 
-    overflow-hidden gap-4 w-44 p-2 pb-8 rounded-md hover:bg-zinc-800 shadow-lg 
-    hover:shadow-xl bg-zinc-500/30"
-    transition:name=`playlist ${id} box`
->
-    <picture class="aspect-square flex-none">
-        <img src={cover}
-        alt="Title"
-        class="object-cover w-44 h-auto rounded-md"
-        transition:name=`playlist ${id} image`
-        >
-    </picture>
-    <div class="flex flex-auto flex-col truncate text-white text-sm px-2"
-    transition:name=`playlist ${id} title`>
-        <h4>
-            {title}
-        </h4>
-        <span class="text-xs text-gray-400"
-        transition:name=`playlist ${id} artists`>
-            {artistsString}
-        </span>
+<article class="group relative"> 
+    <div class="absolute right-4 bottom-20 opacity-0 translate-y-4 transition-all
+                group-hover:opacity-100 group-hover:translate-y-0 duration-100 z-10">
+        <CardPlayButton id={id} />
     </div>
-</a>
+    <a 
+        href= `./playlist/${id}`
+        class=
+        "playlist-item transition-all duration-300 flex flex-col relative 
+        overflow-hidden gap-4 w-44 p-2 pb-8 rounded-md hover:bg-zinc-800 shadow-lg 
+        hover:shadow-xl bg-zinc-500/30"
+        transition:name=`playlist ${id} box`
+    >
+        <picture class="aspect-square flex-none">
+            <img src={cover}
+            alt="Title"
+            class="object-cover w-44 h-auto rounded-md"
+            transition:name=`playlist ${id} image`
+            >
+        </picture>
+        <div class="flex flex-auto flex-col truncate text-white text-sm px-2"
+        transition:name=`playlist ${id} title`>
+            <h4>
+                {title}
+            </h4>
+            <span class="text-xs text-gray-400"
+            transition:name=`playlist ${id} artists`>
+                {artistsString}
+            </span>
+        </div>
+    </a>
+</article>
