--- a/src/components/LayoutPlaylistCard.astro
+++ b/src/components/LayoutPlaylistCard.astro
@@ -12,17 +12,16 @@ const artistsString = artists.join(', ')
 ---
 
 
-<article class="group relative"> 
+<article class="group relative rounded-md hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500/30"> 
     <div class="absolute right-4 bottom-20 opacity-0 translate-y-4 transition-all
-                group-hover:opacity-100 group-hover:translate-y-0 duration-100 z-10">
-        <CardPlayButton id={id} />
+                group-hover:opacity-100 group-hover:translate-y-0 duration-500 z-10">
+        <CardPlayButton id={id} client:visible/>
     </div>
     <a 
         href= `./playlist/${id}`
         class=
         "playlist-item transition-all duration-300 flex flex-col relative 
-        overflow-hidden gap-4 w-44 p-2 pb-8 rounded-md hover:bg-zinc-800 shadow-lg 
-        hover:shadow-xl bg-zinc-500/30"
+        overflow-hidden gap-4 w-44 p-2 pb-8 "
         transition:name=`playlist ${id} box`
     >
         <picture class="aspect-square flex-none">
